green burks video added

--- a/child_pages/cc-elections/Candidates/green.html
+++ b/child_pages/cc-elections/Candidates/green.html
@@ -246,7 +246,18 @@
 
              </div>
 
-             <button class="quick-summary-reopen">quick candidate summary</button>
+             <!-- <button class="quick-summary-reopen">quick candidate summary</button> -->
+              <details class="can-sec" id="quick-summary">
+                <summary style="color: blue;">
+                    <strong>Quick Summary</strong>
+                </summary>
+                Rachel Green is running for Millville City Commissioner on a platform emphasizing community engagement, public safety, economic growth, and education. Drawing on 
+                decades of leadership in education, social justice advocacy, and organizational management, she frames her campaign around grassroots involvement and transparent 
+                governance. Her agenda—adapted from her campaign’s “Opportunities” section—focuses on beautifying public spaces, fostering safer neighborhoods through 
+                community-based policing, improving access to social and economic resources, revitalizing Millville’s economy, and expanding career and technical education 
+                for students. While her campaign messaging highlights strong values of inclusivity and collaboration, it leaves some ambiguity about whether these priorities 
+                are immediate community opportunities for involvement or future policy initiatives she intends to advance if elected.
+            </details>
 
              <div class="election-date">
                  <p>This election is on November 4th, 2025</p>
@@ -265,6 +276,127 @@
              </div>
          </div>
      </div>
+
+     <br>
+     <br>
+
+     <details>
+        <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Videos</summary>
+            <div class="video-box-modal can-sec">
+                <h3 class="video-heading">“The Race to Millville City Commission” — JT Burks Interview with Rachel Green (2025)</h3>
+
+                <iframe src="https://www.youtube.com/embed/tkqSys9OegU?si=k-6dvBiG7akLkTHP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                <br><br>
+
+                <details>
+                    <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">📋 Click here for full interview summary 📋</summary>
+                    <br><br>
+                    <div style="padding: 15px 25px; text-align: left;">
+                        <p>
+                            Candidate <strong>Rachel Green</strong> introduces herself as a mother, wife, “GG,” and longtime community volunteer with a
+                            Bachelor’s in Business Management and a Master’s in Public Administration. A former <em>school board president</em> in Gloucester
+                            County, she frames her campaign around accessibility, listening, and putting residents over special interests.
+                        </p>
+                        <p>
+                            Green embraces being “the new girl” in Millville, arguing that tenure hasn’t delivered results and fresh leadership can.
+                            Her platform centers on <strong>stronger South Jersey advocacy</strong>—collaborating with nearby mayors, pressing Trenton for attention
+                            and resources—and practical local priorities: reliable transportation so residents can reach jobs, <strong>top-notch schools</strong>
+                            with fully supported teachers and admins, revisiting the city <strong>master plan</strong>, and <strong>staffing the police force</strong> while pairing officers with
+                            <strong>wraparound services</strong> (social workers, crisis help, basics like food and diapers) so public safety isn’t asked to be “everything.”
+                        </p>
+                        <p>
+                            She underscores <strong>year-round relationship-building</strong> (not just election-season photo-ops), trust through communication, and
+                            the practical reality of Millville’s commission structure: voters must pick <strong>five people who can work together</strong>. Green is frank
+                            that a single voice can’t move an agenda if consistently outvoted; cohesion and complementary values matter to get results.
+                        </p>
+                    </div>
+                </details>
+
+                <br><br>
+
+                <details>
+                    <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">⏳ Click to view timestamps, topics, and takeaways ⏳</summary>
+                    <div class="video-summary" style="margin-top: 1em;">
+                        <h2>Interview Summary – Rachel Green on JT Burks’ “The Race to Millville City Commission”</h2>
+                        <p>This table highlights the key topics covered in the interview, with major takeaways per section.</p>
+                        <table border="1" cellpadding="8" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+                            <thead>
+                            <tr>
+                                <th style="text-align: left;">Timestamp</th>
+                                <th style="text-align: left;">Topic</th>
+                                <th style="text-align: left;">Key Takeaways</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>0:00–0:20</td>
+                                <td>Intro</td>
+                                <td>JT Burks tees up the 19-candidate, high-stakes Millville race.</td>
+                            </tr>
+                            <tr>
+                                <td>0:20–1:04</td>
+                                <td>Who is Rachel Green?</td>
+                                <td>Mother, wife, “GG,” auntie; BA in Business Management, MPA; former Gloucester County school board president; extensive board/organization work; pledges to work for residents, not special interests.</td>
+                            </tr>
+                            <tr>
+                                <td>1:04–2:25</td>
+                                <td>What sets her apart</td>
+                                <td>Availability, listening, and willingness to invest time; won’t be “too busy” for constituents—accessibility is a core commitment.</td>
+                            </tr>
+                            <tr>
+                                <td>2:25–3:00</td>
+                                <td>South Jersey roots & “newbie” case</td>
+                                <td>South Jersey raised (Gloucester), moved to Millville a few years ago. Argument for fresh leadership: long-timers haven’t delivered—“take a chance on the new girl.”</td>
+                            </tr>
+                            <tr>
+                                <td>3:00–5:40</td>
+                                <td>Giving South Jersey a voice</td>
+                                <td>Coordinate with nearby mayors; press Trenton/Senate President/Speaker directly; priorities include transportation to jobs, top-tier education, working the master plan, police staffing, and adding wraparound social services alongside policing.</td>
+                            </tr>
+                            <tr>
+                                <td>5:40–7:40</td>
+                                <td>Year-round community work</td>
+                                <td>Burks notes she reached out long before running. Green critiques election-season photo-ops; stresses relationship building, two-way communication, email responsiveness, and meeting-room listening.</td>
+                            </tr>
+                            <tr>
+                                <td>7:40–10:10</td>
+                                <td>Make Millville better</td>
+                                <td>Start with conversations that bridge differences; communication → relationships → trust; use leadership roles to deliver community benefit, not personal brand.</td>
+                            </tr>
+                            <tr>
+                                <td>9:50–10:20</td>
+                                <td>Team of five</td>
+                                <td>Millville needs five commissioners who can collaborate; a lone strong voice can be outvoted—pick a complementary slate to get results.</td>
+                            </tr>
+                            <tr>
+                                <td>10:20–End</td>
+                                <td>Close & voter reminder</td>
+                                <td>Encourages voting, doing research, and selecting five candidates who will work together rather than pull in opposite directions.</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </details>
+            </div>
+    </details>
+
+    <br>
+    <br>
+
+     <div class="gauge-box">
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: A bit Above Average (Trending Up)</h4>
+        <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
+
+        <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
+        <!-- <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button> -->
+         <details class="can-sec" id="transparency-accessibility">
+            <summary style="color: blue;">
+                <strong>Explanation</strong>
+            </summary>
+            
+        </details>
+    </div> 
        
     <div class="candidate-agenda">
 
