larae page for school board updated

--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -142,27 +142,20 @@
               <h6 class="page-title">Larae Smith</h6>
               <p>          
 
-                <!-- LaRae Smith is a long-time Cumberland County resident with a well-rounded background in education, public service, and faith-based community work. She has served on the 
-                Commercial Township Board of Education, chaired the township’s Land Use Board and Democratic Committee, and earned recognition for her work in youth engagement, 
-                family support services, and local economic development.
+                LaRae Smith remains a long-time Cumberland County resident with deep roots in education, public service, and faith-based community work. In the 2025 county commissioner race she 
+                distinguished herself by publishing a full platform, granting long interviews, and maintaining a campaign website with event listings—becoming one of the most transparent and 
+                proactive candidates that race.
                 <br>
                 <br>
-                Among the three Democrats running for two open commissioner seats, Smith has emerged as the most proactive in reaching voters. She has published a comprehensive 
-                campaign platform focused on transparent governance, improved services for families and veterans, expanded public transportation, and efforts to address 
-                homelessness. In addition, she recorded a full-length interview and maintains a campaign website with upcoming event listings—offering voters multiple ways to 
-                learn about her background and positions.
+                In her current run for a seat on the Commercial Township Board of Education, the dynamics are different. A township school board is not the county commissioner’s office, and specifics 
+                about this race still need to be clarified. As of this writing, Smith has not yet released new, race-specific materials to InformTheVoteNJ.com. However, compared to other 
+                contenders she remains the only candidate who has been reachable and willing to engage in dialogue since outreach began this year.
                 <br>
                 <br>
-                While Smith remains unendorsed by the county Democratic establishment, she has taken it upon herself to fill the gaps left by the party’s limited infrastructure. 
-                As of now, the county party’s website still contains no event listings or visibility support for any of its candidates—endorsed or unendorsed. Smith isn’t 
-                responsible for that institutional breakdown, but she has shown a willingness to rise above it and do the work independently.
+                This contrast underscores her reputation for accessibility: even without formal campaign collateral in place, she continues to respond when asked for information. Voters will still 
+                need clear issue positions tailored to this school board contest, but her track record suggests she may fill those gaps as the race progresses..
                 <br>
-                <br>
-                In a race where voter awareness remains low and basic candidate information is often hard to find, Smith’s transparency and consistency stand out. With two 
-                seats available and only three Democratic contenders, she is in strong position to advance to the general election. Her continued outreach and follow-through will 
-                be crucial in solidifying support, but so far, she has done more than most to earn the attention of engaged voters.
-                <br>
-                <br> -->
+                <br> 
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
 
               </p>
@@ -177,10 +170,16 @@
               <h6 class="page-title">Larae Smith</h6>
               <p>          
 
-                <!-- Larae Smith has continued to improve her transparency and accessibility this election season by corresponding directly with InformTheVoteNJ, participating in a full-length 
-                interview to discuss her background, agenda, and stance on key county issues, and publishing her own website that includes her agenda and campaign events. This level of 
-                engagement demonstrates a clear commitment to informing voters. Throughout this campaign season she has gone from a relatively moderate visibility based on prior 
-                campaign seasons, to a full level of transparency based on our reasonable standards. Well done Larae. -->
+                During her 2025 county commissioner run, LaRae Smith set a high bar for transparency by corresponding directly with InformTheVoteNJ, sitting for a full-length interview, and 
+                maintaining her own campaign website with an agenda and event listings. That track record still reflects positively on her today.
+                <br>
+                <br>
+                In the current school board race, however, no new race-specific materials or updates have yet been provided to InformTheVoteNJ. While she remains the only candidate who has been 
+                reachable and willing to engage in conversation since outreach began this year, voters do not yet have a clear, updated view of her priorities for this particular contest.
+                <br>
+                <br>
+                Taken together, her past openness combined with limited new information places her a bit above average for transparency and accessibility at this stage—better than most of her peers 
+                in responsiveness, but not yet at the level of fully proactive disclosure that she achieved in her commissioner campaign.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -574,10 +573,10 @@
     
 
      <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Excellent</h4>
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: A bit above average</h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
-        <img class="gauge" src="../../../assets/gauge_good.svg" alt="">
+        <img class="gauge" src="../../../assets/gauge_dead_center.svg" alt="">
         <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
     </div> 
             
