fiocchi page update

--- a/child_pages/cc-elections/Candidates/fiocchi.html
+++ b/child_pages/cc-elections/Candidates/fiocchi.html
@@ -12,7 +12,7 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="Candidate Nicholas L. Fiocchi">
         <meta property="og:description" content="Running For Vineland Board of Education">
-        <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/">
+        <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/fiocchi.jpg">
         <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/fiocchi">
     </head>
 <!-- Google tag (gtag.js) -->
@@ -231,12 +231,13 @@
          </div>
      </div>
      <div class="candidate-pic-box">
-         <!-- <img class="cover" src="../../../assets/candidates/.jpg" class="candidate-pic"> -->
+         <img class="cover" src="../../../assets/candidates/fiocchi.jpg" class="candidate-pic">
          <div class="candidate-pic-box-content">
-             <h4 class="sub-heading">Websites</h4>
+             <h4 class="sub-heading" style="text-align: center;">Websites</h4>
              <div class="website">
                  
-                 
+                <a href="https://www.facebook.com/NFVineland" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook (Campaign)</button></a>
+
              </div>
 
              <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
