sabo dual modal abandoned and wvlt interview added

--- a/child_pages/cc-elections/Candidates/sabo.html
+++ b/child_pages/cc-elections/Candidates/sabo.html
@@ -276,7 +276,24 @@
 
              </div>
 
-             <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
+             <!-- <button id="quick-summary-reopen" class="quick-sum">quick summary</button> -->
+              <details class="can-sec" id="quick-summary">
+                <summary style="color: blue;">
+                    <strong>Quick Summary</strong>
+                </summary>
+                Carol Sabo is a Democratic candidate for the New Jersey General Assembly in Legislative District 1 and currently serves as Mayor of West 
+                Cape May. With a background in social work, education, and local government, Sabo has built her career on community advocacy and public 
+                service. She supports universal access to healthcare—including both physical and mental health—believing it should function as a public 
+                service rather than a for-profit industry. A strong proponent of public education, she opposes school voucher programs and backs increased 
+                investment in local schools. On energy, she advocates a balanced approach that includes continued fossil fuel use during a long-term 
+                transition towards more renewables. Her housing agenda emphasizes both affordability and sustainability, including guaranteed housing for veterans 
+                and expanded apartment development in underserved areas like Cape May County.
+                <br>
+                <br>
+                While early campaign outreach and visibility were limited, Sabo recently participated in a detailed phone interview and expressed openness to 
+                further engagement through radio and podcast formats. Her campaign messaging remains sparse online and she has not advertised public 
+                appearances, but her willingness to begin engaging more directly with voters and the press marks a meaningful step in the right direction.
+            </details>
 
              <div class="election-date">
                  <p>This election is on November 5th, 2025</p>
@@ -301,8 +318,152 @@
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
         <img class="gauge" src="../../../assets/gauge_dead_center.svg" alt="">
-        <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
+        <!-- <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button> -->
+
+        <details class="can-sec" id="transparency-accessibility">
+            <summary style="color: blue;">
+                <strong>Explanation</strong>
+            </summary>
+            Carol Sabo is running for NJ General Assembly in Legislative District 1. While her campaign website provides a general overview of her 
+                background and values, it currently offers limited detail on specific policies or legislative priorities. For much of the primary election cycle, 
+                her campaign had lacked the standard infrastructure voters increasingly rely on—such as detailed online messaging, consistent email 
+                responsiveness, or publicly advertised event appearances.
+                <br>
+                <br>
+                That said, a recent phone interview marked a meaningful step in the right direction. In that conversation, Sabo provided much more substantive 
+                insight into her background, ideology, and issue-based priorities than what had previously been available. She also expressed a willingness 
+                to continue engaging through future formats, including a potential appearance on our radio show and a longer-form podcast—both of which 
+                indicate an encouraging openness to transparency.
+                <br>
+                <br>
+                However, it’s important to note that this progress comes after weeks of outreach attempts and largely informal methods of contact. The absence 
+                of a consistent communication pipeline—either for voters or the press—means that access to her campaign still depends heavily on persistence 
+                and timing, rather than predictability or invitation. In that sense, Sabo's campaign remains in a gray area: more open than some, but still 
+                lacking the public-facing structure needed to reliably reach and inform constituents.
+                <br>
+                <br>
+                For these reasons, Sabo now receives an average rating for transparency and accessibility. This reflects meaningful improvement and a promising 
+                attitude toward further engagement. If she follows through on her expressed willingness to participate in public forums and provide ongoing 
+                issue-based clarity, she could easily reach a higher rating in the near future. This platform exists to support exactly that kind of 
+                progress—for all candidates—by offering fair opportunities to engage the public and document their positions.
+        </details>
     </div> 
+
+    <details>
+            <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Videos</summary>
+        
+    <div class="video-box-modal can-sec">
+    <h3 class="video-heading">InformTheVoteNJ Radio Hour — Interview with Carol Sabo (2025)</h3>
+
+            <iframe src="https://www.youtube.com/embed/hTKkbfUNnOk?si=R3IQvRPEHr7rqynx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+            <br><br>
+
+            <details>
+                <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">📋 Click here for full interview summary 📋</summary>
+                <br><br>
+                <div style="padding: 15px 25px; text-align: left;">
+                    <p>
+                        On this episode of <em>InformTheVoteNJ Radio Hour</em> (Cruisin 92.1 WVLT), host Steven Solof sits down with
+                        <strong>Carol Sabo</strong>, Mayor of West Cape May and candidate for New Jersey’s LD1 General Assembly.
+                    </p>
+                    <p>
+                        Carol shares her decades of experience in social work, advocacy, and municipal leadership, discusses key campaign
+                        priorities like healthcare access, affordable housing, and public education, and explains why she’s running for higher office.
+                    </p>
+                    <p>
+                        Steven also offers his usual introductory report on campaign culture, voter timelines, and the need for more robust
+                        candidate engagement in Cumberland County.
+                    </p>
+                    <p>
+                        This is an introductory conversation—a starting point for voters to get to know Carol Sabo and what she hopes to bring to Trenton.
+                    </p>
+                </div>
+            </details>
+
+            <br><br>
+
+            <details>
+                <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">⏳ Click to view timestamps, topics, and takeaways ⏳</summary>
+                <div class="video-summary" style="margin-top: 1em;">
+                    <h2>Interview Summary – Carol Sabo on InformTheVoteNJ Radio Hour</h2>
+                    <p>This table highlights the key topics covered in the interview, summarizing major takeaways per section.</p>
+                    <table border="1" cellpadding="8" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+                        <thead>
+                        <tr>
+                            <th style="text-align: left;">Timestamp</th>
+                            <th style="text-align: left;">Topic</th>
+                            <th style="text-align: left;">Key Takeaways</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>0:00 – 6:28</td>
+                            <td>Introductory Report</td>
+                            <td>Steven explains outreach process, apologizes for earlier Millville timeline comments, and emphasizes timely, substantive candidate engagement.</td>
+                        </tr>
+                        <tr>
+                            <td>6:28 – 13:29</td>
+                            <td>Carol’s Background & Upbringing</td>
+                            <td>NJ roots; early career investigating child abuse; statewide travel shaped perspective.</td>
+                        </tr>
+                        <tr>
+                            <td>13:29 – 18:21</td>
+                            <td>Transition to Politics</td>
+                            <td>Advocacy work and ERA efforts; path to borough commissioner and Mayor of West Cape May.</td>
+                        </tr>
+                        <tr>
+                            <td>18:21 – 21:44</td>
+                            <td>Union Advocacy & Early Legislative Work</td>
+                            <td>CWA experience; lobbying for children and families; impact on public-service outlook.</td>
+                        </tr>
+                        <tr>
+                            <td>22:01 – 27:20</td>
+                            <td>Campaign Priorities: Healthcare & Housing</td>
+                            <td>Supports universal healthcare; flags Cape May County’s lack of a homeless shelter as urgent.</td>
+                        </tr>
+                        <tr>
+                            <td>27:20 – 33:00</td>
+                            <td>Reproductive Rights & Individual Liberties</td>
+                            <td>Wants reproductive freedoms fully codified in NJ; critiques federal-level liberty inconsistencies.</td>
+                        </tr>
+                        <tr>
+                            <td>33:00 – 36:16</td>
+                            <td>War, Trauma & Social Work Insights</td>
+                            <td>Discusses generational trauma from war; importance of conflict-resolution skills.</td>
+                        </tr>
+                        <tr>
+                            <td>36:16 – 43:00</td>
+                            <td>Critical Thinking & Listening Skills</td>
+                            <td>Listening to understand (not just respond) as a civic and political necessity.</td>
+                        </tr>
+                        <tr>
+                            <td>43:00 – 47:00</td>
+                            <td>Campaign Motivation & Authenticity</td>
+                            <td>Running to serve LD1 for the right reasons—service over résumé building.</td>
+                        </tr>
+                        <tr>
+                            <td>47:00 – 53:00</td>
+                            <td>Steven’s Civic Advocacy Ideas</td>
+                            <td>Discusses civics education in schools, county-run candidate info hubs, and improved voter awareness.</td>
+                        </tr>
+                        <tr>
+                            <td>53:00 – 55:44</td>
+                            <td>Rebuilding Local Press</td>
+                            <td>Role of local journalism, forums, and community media in informed voting.</td>
+                        </tr>
+                        <tr>
+                            <td>55:44 – End</td>
+                            <td>Closing & Gratitude</td>
+                            <td>Steven thanks Carol for sharing her platform; encourages voters to track which candidates step up for real conversations.</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </details>
+        </div>
+
+    </details>
             
      <div class="candidate-agenda">
 
