sabo page update

--- a/child_pages/cc-elections/Candidates/sabo.html
+++ b/child_pages/cc-elections/Candidates/sabo.html
@@ -324,28 +324,22 @@
             <summary style="color: blue;">
                 <strong>Explanation</strong>
             </summary>
-            Carol Sabo is running for NJ General Assembly in Legislative District 1. While her campaign website provides a general overview of her 
-                background and values, it currently offers limited detail on specific policies or legislative priorities. For much of the primary election cycle, 
-                her campaign had lacked the standard infrastructure voters increasingly rely on—such as detailed online messaging, consistent email 
-                responsiveness, or publicly advertised event appearances.
-                <br>
-                <br>
-                That said, a recent phone interview marked a meaningful step in the right direction. In that conversation, Sabo provided much more substantive 
-                insight into her background, ideology, and issue-based priorities than what had previously been available. She also expressed a willingness 
-                to continue engaging through future formats, including a potential appearance on our radio show and a longer-form podcast—both of which 
-                indicate an encouraging openness to transparency.
-                <br>
-                <br>
-                However, it’s important to note that this progress comes after weeks of outreach attempts and largely informal methods of contact. The absence 
-                of a consistent communication pipeline—either for voters or the press—means that access to her campaign still depends heavily on persistence 
-                and timing, rather than predictability or invitation. In that sense, Sabo's campaign remains in a gray area: more open than some, but still 
-                lacking the public-facing structure needed to reliably reach and inform constituents.
-                <br>
-                <br>
-                For these reasons, Sabo now receives an average rating for transparency and accessibility. This reflects meaningful improvement and a promising 
-                attitude toward further engagement. If she follows through on her expressed willingness to participate in public forums and provide ongoing 
-                issue-based clarity, she could easily reach a higher rating in the near future. This platform exists to support exactly that kind of 
-                progress—for all candidates—by offering fair opportunities to engage the public and document their positions.
+            Carol Sabo has moved decisively in the right direction. She completed a full hour on the InformTheVoteNJ Radio Hour (WVLT 92.1), giving voters a 
+            clear, long-form look at her background and priorities. She’s also been visibly present across Cumberland County—showing up at multiple public 
+            events—and she proactively tags InformTheVoteNJ on social media to flag where she’ll be, which meaningfully improves discoverability for 
+            voters and press.
+            <br>
+            <br>
+            These behaviors—long-form interviews, in-county presence, and proactive notice—push her above the typical baseline for transparency and 
+            accessibility. They also signal a willingness to meet voters where they are, not just during peak campaign moments.
+            <br>
+            <br>
+            The most room for improvement thus far, which is not specific to her, is to clearly advertise campaign events like meet n greets, town halls, etc 
+            so that curious voters and the press know they will have a planned chance to meet and ask questions.
+            <br>
+            <br>
+            Overall: Above Average today, with clear momentum. If the current cadence of appearances, advance notices, and substantive interviews 
+            continues—and is paired with a simple, predictable information pipeline—Sabo is on track to reach Top-Tier.
         </details>
     </div> 
 
