sabo small edits

--- a/child_pages/cc-elections/Candidates/sabo.html
+++ b/child_pages/cc-elections/Candidates/sabo.html
@@ -265,7 +265,7 @@
      <div class="candidate-pic-box">
          <img class="cover" src="../../../assets/candidates/sabo.avif" class="candidate-pic">
          <div class="candidate-pic-box-content">
-             <h4 class="sub-heading">Websites</h4>
+             <h4 class="sub-heading" style="text-align: center;">Websites</h4>
              <div class="website">
                  
                 <a href="https://www.saboforassembly.org/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Campaign Site</button></a>
@@ -342,6 +342,8 @@
             continues—and is paired with a simple, predictable information pipeline—Sabo is on track to reach Top-Tier.
         </details>
     </div> 
+
+    <br>
 
     <details>
             <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Videos</summary>
@@ -458,6 +460,8 @@
         </div>
 
     </details>
+
+    <br>
             
      <div class="candidate-agenda">
 
